apps/speedtest/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  labels:
    app: speedtest
  namespace: halo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: henrywhitaker3/speedtest-tracker:latest-arm
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: speedtest-data-claim
              mountPath: /config
      volumes:
        - name: speedtest-data-claim
          persistentVolumeClaim:
            claimName: speedtest-pvc
