apps/speedtest/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: halo
spec:
  selector:
    app: speedtest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
